--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
-var http = require("http");
-var url = require("url");
-
-var server = http.createServer(function(request, response) {
-  var currpath = JSON.stringify(url.parse(request.url).path);
-  var input = decodeURIComponent(currpath.slice(2,currpath.length-1));
-  response.writeHead(200, {"Content-Type": "text/plain"});
-  if (/[a-zA-Z]/.test(input)) {
-  var d = new Date(input);
-  if (isNaN(d.getTime())) {
-    response.write(JSON.stringify({"unix": null, "natural": null}))
-  }
-  else {response.write(JSON.stringify({"unix": d.getTime().toString(), "natural": input}))}
-    
-  }
-  else {
-    var d = new Date(parseInt(input));
-    response.write(JSON.stringify({"unix": input, "natural": d.toDateString()}))
-    
-  }
-  response.end();
-})
-server.listen(process.env.PORT); // We're using 'process.env.PORT' instead of '8888' as in the book
+{
+  "name": "http-server",
+	"version": "0.0.2",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js"
+	},
+	"dependencies": {
+	},
+	"engines": {
+		"node": "4.4.3"
+	},
+	"repository": {
+		"type": "git"
+	},
+	"keywords": [
+		"node"
+	],
+		"license": ""
+}
